fix text over image on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,6 @@
   list-style: none;
 }
 
-.showCaseDiv {
-  max-width: 50vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 25px;
-}
-
 footer {
   margin-top: 26px;
 }
@@ -41,4 +32,7 @@ a {
 }
 .grow:active {
   transform: scale(0.9);
+}
+.textDiv {
+  max-width: 75vh;
 }
